refactor: rename & reorganize code & add mockups
- renamed and relocated existing component files
- added 3 new components for temporary mock-up display
- applied styling adjustments
- minor code refactoring for consistency

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,4 @@
-#root {
-  text-align: center;
-}
+@import url(./components/resume/styles/CvOutput.css);
 
 .container {
   display: flex;
@@ -11,7 +9,7 @@
   padding: 1rem;
 }
 
-section {
+#form-area section {
   background-color: #e8e8e87c;
   margin: 1rem;
   padding: 1rem;
