--- a/src/components/resume/styles/CvOutput.css
+++ b/src/components/resume/styles/CvOutput.css
@@ -1,3 +1,35 @@
+a {
+  text-decoration: none;
+  color: initial;
+}
+
+a:hover {
+  text-decoration: underline;
+  color: blue;
+}
+
+.resume {
+  background-color: #f4ffffbd;
+  box-shadow: 0 0 5px;
+  margin: 1rem;
+  padding: 1rem;
+}
+
+.resume .personal-info {
+  border-top: none;
+}
+
+.resume section > div {
+  border-top: 1px solid #000;
+}
+
+#personal-information {
+  margin: 1rem;
+  padding: 1rem;
+}
+
+/* PERSONAL INFO SECTION */
+
 .personal-info {
   display: flex;
   flex-direction: column;
@@ -16,12 +48,37 @@
   margin: 0.5rem;
 }
 
-a {
-  text-decoration: none;
-  color: initial;
+/* EDUCATION INFIO SECTION */
+
+.education-information {
+  margin: 1rem;
+  padding: 1rem;
+  display: flex;
+  justify-content: space-between;
 }
 
-a:hover {
-  text-decoration: underline;
-  color: blue;
+.program {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+}
+
+.dates {
+  display: flex;
+  flex-direction: column;
+}
+
+/* WORK EXPERIENCE SECTION  */
+
+.work-experience {
+  margin: 1rem;
+  padding: 1rem;
+  display: flex;
+  justify-content: space-between;
+}
+
+.left-area {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
 }
