--- a/src/components/resume/styles/CvOutput.css
+++ b/src/components/resume/styles/CvOutput.css
@@ -11,8 +11,8 @@ a:hover {
 .resume {
   background-color: #f4ffffbd;
   box-shadow: 0 0 5px;
-  margin: 1rem;
-  padding: 1rem;
+  margin: 0.5rem;
+  padding: 0.5rem;
 }
 
 .resume .personal-info {
@@ -23,9 +23,10 @@ a:hover {
   border-top: 1px solid #000;
 }
 
-#personal-information {
-  margin: 1rem;
-  padding: 1rem;
+.resume section {
+  margin: 0.5rem;
+  padding: 0.5rem;
+  margin-bottom: 0;
 }
 
 /* PERSONAL INFO SECTION */
@@ -35,9 +36,9 @@ a:hover {
   flex-direction: column;
 }
 
-.personal-info span {
-  margin: 0.3rem;
-  padding: 0.3rem;
+span {
+  padding: calc(0.2rem + 0.2vw);
+  margin: calc(0.2rem + 0.2vw);
 }
 
 #full-name {
@@ -51,12 +52,16 @@ a:hover {
 /* EDUCATION INFIO SECTION */
 
 .education-information {
-  margin: 1rem;
-  padding: 1rem;
+  margin: 0.5rem;
+  padding: 0.5rem;
+  margin-bottom: 0;
+}
+.education-entry {
+  margin: 0.3rem;
+  padding: 0.3rem;
   display: flex;
   justify-content: space-between;
 }
-
 .program {
   display: flex;
   flex-direction: column;
@@ -71,8 +76,13 @@ a:hover {
 /* WORK EXPERIENCE SECTION  */
 
 .work-experience {
-  margin: 1rem;
-  padding: 1rem;
+  margin: 0.5rem;
+  padding: 0.5rem;
+}
+
+.work-exp-entry {
+  margin: 0.3rem;
+  padding: 0.3rem;
   display: flex;
   justify-content: space-between;
 }
