--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@import url(./components/resume/styles/CvOutput.css);
+/* @import url(./components/resume/styles/CvOutput.css); */
 
 .container {
   display: flex;
