--- a/src/components/resume/styles/CvOutput.css
+++ b/src/components/resume/styles/CvOutput.css
@@ -8,6 +8,10 @@ a:hover {
   color: blue;
 }
 
+hr {
+  margin: 0 auto 3px auto;
+}
+
 .resume {
   background-color: #f4ffffbd;
   box-shadow: 0 0 5px;
@@ -19,8 +23,12 @@ a:hover {
   border-top: none;
 }
 
-.resume section > div {
-  border-top: 1px solid #000;
+.education-information h4,
+.work-experience h4 {
+  /* border-bottom: 1px solid #000; */
+  text-align: left;
+  margin: 0;
+  padding-left: 0.5rem;
 }
 
 .resume section {
