--- a/src/components/resume/styles/CvOutput.css
+++ b/src/components/resume/styles/CvOutput.css
@@ -1,11 +1,11 @@
 a {
   text-decoration: none;
-  color: initial;
+  color: inherit;
 }
 
 a:hover {
   text-decoration: underline;
-  color: blue;
+  color: #7ca0de;
 }
 
 hr {
@@ -14,25 +14,30 @@ hr {
 
 .resume {
   background-color: #f4ffffbd;
-  box-shadow: 0 0 5px;
-  margin: 0.5rem;
-  padding: 0.5rem;
+  box-shadow: 0px 0px 15px 0px #00000069;
+}
+
+#personal-information {
+  background-color: #0e374e;
+  color: var(--white-text-color);
 }
 
 .resume .personal-info {
-  border-top: none;
+  margin: 0;
 }
 
 h4 {
-  border-bottom: 1px solid #000;
+  /* border-bottom: 1px solid #000; */
+  background-color: #0e374e12;
   text-align: left;
   margin: 0;
-  padding-left: 0.5rem;
+  padding: 10px;
+  padding-left: 1rem;
 }
 
 .resume section {
-  margin: 0.5rem;
-  padding: 0.5rem;
+  margin: 0;
+  padding: 1rem;
   margin-bottom: 0;
 }
 
@@ -44,8 +49,15 @@ h4 {
 }
 
 span {
-  padding: calc(0.2rem + 0.2vw);
-  margin: calc(0.2rem + 0.2vw);
+  padding: 0.2rem;
+  margin: 0.2rem;
+}
+
+.present {
+  font-size: 0.8rem;
+  font-style: italic;
+  padding: 0;
+  margin: 0;
 }
 
 #full-name {
@@ -63,11 +75,10 @@ span {
   padding: 0.5rem;
   margin-bottom: 0;
 }
-.education-entry {
+.entry {
   margin: 0.3rem;
   padding: 0.3rem;
   display: flex;
-  justify-content: space-between;
 }
 .program {
   display: flex;
@@ -77,7 +88,8 @@ span {
 
 .dates {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  min-width: calc(7vw + 121px);
 }
 
 .school-name {
@@ -91,14 +103,7 @@ span {
   padding: 0.5rem;
 }
 
-.work-exp-entry {
-  margin: 0.3rem;
-  padding: 0.3rem;
-  display: flex;
-  justify-content: space-between;
-}
-
-.left-area {
+.details {
   display: flex;
   flex-direction: column;
   align-items: start;
