--- a/src/components/resume/styles/CvOutput.css
+++ b/src/components/resume/styles/CvOutput.css
@@ -15,6 +15,7 @@ hr {
 .resume {
   background-color: #f4ffffbd;
   box-shadow: 0px 0px 15px 0px #00000069;
+  min-height: 110vh;
 }
 
 #personal-information {
@@ -107,4 +108,42 @@ span {
   display: flex;
   flex-direction: column;
   align-items: start;
+}
+
+.company-name {
+  font-weight: 600;
+}
+
+.position {
+  font-size: 0.9rem;
+  letter-spacing: 1px;
+  color: var(--gray-text-color);
+  font-style: italic;
+}
+
+@media screen and (max-width: 320px) {
+  .resume {
+    width: 99%;
+  }
+  .personal-info {
+    flex-direction: column;
+  }
+}
+
+@media screen and (min-width: 900px) {
+  .resume {
+    max-width: calc(100vw - 35vw);
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .resume {
+    max-width: calc(100vw - 40vw);
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .resume {
+    max-width: calc(100vw - 55vw);
+  }
 }
