style: some very very basic styling to view data

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 @import url(./components/form/Form.css);
+@import url(./components/output/resume.css);
 /* @import url(./components/resume/styles/CvOutput.css); */
 
 :root {
