--- a/src/App.css
+++ b/src/App.css
@@ -12,10 +12,15 @@
 .container {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-around;
   text-align: center;
+  align-items: center;
   margin: 1rem;
   padding: 1rem;
+}
+
+#form-area {
+  width: 30vw;
 }
 
 #form-area section {
@@ -24,6 +29,11 @@
   padding: 1rem;
   box-shadow: 0px 0px 15px 0px #00000069;
   border-radius: 16px;
+}
+
+#resume-area {
+  width: 50vw;
+  align-self: flex-end;
 }
 
 .accordion-content {
@@ -86,8 +96,8 @@ form textarea {
 @media screen and (max-width: 320px) {
   .container {
     width: 100%;
-    /* margin: calc(0.3rem + 1vw);
-    padding: calc(0.3rem + 1vw); */
+    margin: calc(0.3rem + 1vw);
+    padding: calc(0.3rem + 1vw);
     margin: 0;
     padding: 0;
   }
