--- a/src/components/form/Form.css
+++ b/src/components/form/Form.css
@@ -2,8 +2,13 @@ section {
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  border: 1px solid #ccc;
-  margin: 20px;
+  background-color: #fff;
+  max-width: 30vw;
+}
+
+section button {
+  background-color: #fff;
+  border: none;
 }
 
 .shown {
