--- a/src/App.css
+++ b/src/App.css
@@ -14,13 +14,16 @@
   flex-direction: column;
   justify-content: space-around;
   text-align: center;
-  align-items: center;
+  align-items: flex-start;
   margin: 1rem;
   padding: 1rem;
 }
 
 #form-area {
   width: 30vw;
+  height: 70vh;
+  position: sticky;
+  top: 0;
 }
 
 #form-area section {
@@ -29,6 +32,12 @@
   padding: 1rem;
   box-shadow: 0px 0px 15px 0px #00000069;
   border-radius: 16px;
+}
+
+.form-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-self: flex-start;
 }
 
 #resume-area {
@@ -54,11 +63,12 @@
 
 .icon {
   transition: transform 0.3s ease;
+  font-size: 1.28rem;
 }
 
-.icon.rotate {
-  transform: rotate(180deg);
-}
+/* .icon:hover {
+  font-size: 1.4rem;
+} */
 
 form {
   display: flex;
