--- a/src/components/output/resume.css
+++ b/src/components/output/resume.css
@@ -3,6 +3,7 @@
   box-shadow: 0px 0px 15px 0px #00000069;
   background-color: #fff;
   padding: 2.5rem;
+  min-height: 60vh;
 }
 
 .display-info h2:first-child {
@@ -10,14 +11,8 @@
   text-align: center;
 }
 
-.display-info h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+.display-info h2 {
   text-align: left;
-  border-bottom: 1px solid #707070;
 }
 
 .personal-data-row {
@@ -52,4 +47,21 @@ h6 {
 
 .buttons {
   align-self: end;
+}
+
+button {
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+  border-radius: 3px;
+  padding: 10px;
+}
+
+button.remove:hover {
+  background-color: #fa7f7f;
+  color: white;
+}
+
+button.edit:hover {
+  background-color: #ffeb7d;
 }
