--- a/src/components/output/resume.css
+++ b/src/components/output/resume.css
@@ -2,8 +2,36 @@
   border: 1px solid #ededed;
   box-shadow: 0px 0px 15px 0px #00000069;
   background-color: #fff;
-  padding: 2.5rem;
   min-height: 60vh;
+}
+
+.personal-data-wrapper {
+  padding: 1.5rem;
+
+  background-color: cadetblue;
+  color: whitesmoke;
+}
+
+.personal-data-wrapper a {
+  color: inherit;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.personal-data-wrapper a:hover {
+  text-decoration: underline;
+}
+
+.personal-data-wrapper .icon {
+  color: whitesmoke;
+}
+
+.education-data-wrapper {
+  padding: 0 1.5rem 0 1.5rem;
+}
+
+.experience-data-wrapper {
+  padding: 0 1.5rem 1.5rem 1.5rem;
 }
 
 .display-info h2:first-child {
@@ -19,6 +47,11 @@
   display: flex;
   flex-direction: row;
   justify-content: space-around;
+  align-items: center;
+}
+
+.personal-data-row .buttons {
+  align-self: center !important;
 }
 
 .contact-info {
@@ -63,5 +96,6 @@ button.remove:hover {
 }
 
 button.edit:hover {
-  background-color: #ffeb7d;
+  background-color: #efcc75;
+  color: #fff;
 }
