--- a/src/components/output/resume.css
+++ b/src/components/output/resume.css
@@ -1,25 +1,41 @@
-.display-info {
-  border: 1px solid #ededed;
-  box-shadow: 0px 0px 15px 0px #00000069;
-  background-color: #fff;
-  min-height: 60vh;
-}
-
-.personal-data-wrapper {
+aside {
+  flex: 0 0 25%;
   padding: 1.5rem;
-
   background-color: cadetblue;
   color: whitesmoke;
+  display: flex;
+  flex-direction: column;
 }
 
-.personal-data-wrapper a {
+.profile-photo {
+  width: 200px;
+  height: 200px;
+  border: 2px solid #f0f0f0;
+  border-radius: 50%;
+  object-fit: cover;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+aside a {
   color: inherit;
   text-decoration: none;
   font-weight: bold;
 }
 
-.personal-data-wrapper a:hover {
+aside a:hover {
   text-decoration: underline;
+}
+
+main {
+  flex: 1;
+}
+
+.display-info {
+  border: 1px solid #ededed;
+  box-shadow: 0px 0px 15px 0px #00000069;
+  background-color: #fff;
+  height: 125vh;
+  display: flex;
 }
 
 .personal-data-wrapper .icon {
@@ -45,7 +61,7 @@
 
 .personal-data-row {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: space-around;
   align-items: center;
 }
@@ -116,7 +132,8 @@ button.edit:hover {
     margin-inline-start: 0px;
     margin-inline-end: 0px;
   }
-  .education-data-wrapper {
+  .education-data-wrapper,
+  .experience-data-wrapper {
     padding: 0 0.5rem;
   }
   .entry {
