--- a/src/components/output/resume.css
+++ b/src/components/output/resume.css
@@ -16,10 +16,14 @@ aside {
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
+.photo {
+  margin: 1rem;
+}
+
 aside a {
   color: inherit;
   text-decoration: none;
-  font-weight: bold;
+  margin: 0.5rem;
 }
 
 aside a:hover {
@@ -28,9 +32,10 @@ aside a:hover {
 
 main {
   flex: 1;
+  padding: 1.5rem;
 }
 
-.display-info {
+.resume-layout {
   border: 1px solid #ededed;
   box-shadow: 0px 0px 15px 0px #00000069;
   background-color: #fff;
@@ -71,10 +76,10 @@ main {
 }
 
 .contact-info {
-  margin-block-start: 1.33em;
-  margin-block-end: 1.33em;
-  margin-inline-start: 0px;
-  margin-inline-end: 0px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: flex-start;
 }
 
 .entry-wrapper {
