--- a/src/components/form/Form.css
+++ b/src/components/form/Form.css
@@ -1,4 +1,4 @@
-section {
+#form-area section {
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -6,7 +6,7 @@ section {
   max-width: 30vw;
 }
 
-section button {
+#form-area section button {
   background-color: #fff;
   border: none;
   font-size: 1rem;
