--- a/src/components/output/resume.css
+++ b/src/components/output/resume.css
@@ -1,3 +1,12 @@
+.section-header {
+  text-align: left;
+  margin-top: 20px;
+}
+
+.section-header h3 {
+  margin: 0;
+}
+
 aside {
   flex: 0 0 25%;
   padding: 1.5rem;
@@ -33,6 +42,19 @@ aside a:hover {
 main {
   /* flex: 1; */
   padding: 1.5rem;
+}
+
+.data-row {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  gap: 1rem;
+  align-items: center;
+  border-bottom: 1px solid #cfcfcf;
+}
+
+main .data-section .data-row:last-child {
+  border: none !important;
 }
 
 .resume-layout {
@@ -89,19 +111,12 @@ main {
   flex-grow: 1;
 }
 
-.data-row {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  gap: 1rem;
-  align-items: center;
-}
-
 .entry {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   padding: 0.5rem;
+  text-align: left;
 }
 
 /* .years {
