--- a/src/components/form/Form.css
+++ b/src/components/form/Form.css
@@ -39,7 +39,12 @@ form textarea {
   padding: 8px;
   border: 1px solid #ccc;
   border-radius: 4px;
-  resize: vertical;
+  /* resize: vertical; */
+  width: 24vw;
+  max-width: 600px;
+  height: 10vh;
+  min-height: 100px;
+  resize: both;
 }
 
 form input:focus {
@@ -84,8 +89,18 @@ label {
   display: block;
 }
 
-@media (max-width: 768px) {
+@media screen and (max-width: 900px) {
   form {
-    padding: 1rem;
+    margin: 0;
+    padding: 0;
+  }
+  form textarea {
+    width: 69vw;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  form textarea {
+    width: 65vw;
   }
 }
