style: adjust height for responsiveness

--- a/src/components/output/resume.css
+++ b/src/components/output/resume.css
@@ -39,6 +39,10 @@ aside a:hover {
   text-decoration: underline;
 }
 
+aside p {
+  margin: 0.5rem;
+}
+
 main {
   /* flex: 1; */
   padding: 1.5rem;
