feat: add further form fields to `personalInfo`

--- a/src/components/form/Form.css
+++ b/src/components/form/Form.css
@@ -6,11 +6,11 @@
   max-width: 30vw;
 }
 
-#form-area section button {
+/* #form-area section button {
   background-color: #fff;
   border: none;
   font-size: 1rem;
-}
+} */
 
 form {
   display: flex;
