--- a/src/components/output/resume.css
+++ b/src/components/output/resume.css
@@ -151,6 +151,12 @@ button.edit:hover {
   color: #fff;
 }
 
+/* .section {
+  display: flex;
+  flex-direction: column;
+  justify-content: ;
+} */
+
 @media screen and (max-width: 1780px) {
   .resume-layout {
     transform: scale(0.8);
