--- a/src/App.css
+++ b/src/App.css
@@ -151,7 +151,7 @@ footer {
   }
   #form-area section {
     max-width: 100%;
-    padding: 0.25rem;
+    padding: 0.25rem 0.5rem;
     border-radius: 7px;
   }
 
